--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
 
 <body>
     <div class="container">
+        <div class="topbar">
+            <div class="logo-container">
+                <a href="#"><i class="fas fa-bars l-icon"></i></a>
+                <a href="#"><i class="fab fa-youtube l-icon"></i>YouTube<sup>DE</sup></a>
+            </div>
+            <div class="search-container">
+                <form action="/action_page.php">
+                    <input type="text" placeholder="Search" name="search">
+                    <button type="submit"><i class="fa fa-search"></i></button>
+                    <a href="#"><i class="fas fa-microphone"></i></a>
+                </form>
+            </div>
+            <div class="personal-account">
+                <a href="#"><i class="fas fa-video"></i></a>
+                <a href="#"><i class="fas fa-ellipsis-h"></i></a>
+                <a href="#"><i class="fas fa-bell"></i></a>
+                <img src="./images/MyAvatar.jpg" alt="My account avatar" class="myavatar">
+            </div>
+        </div>
         <div class="left-sidebar">
             <ul>
                 <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
@@ -34,14 +53,12 @@
                 <li><a href="#">Business Insider</a></li>
                 <li><a href="#">Tasty</a></li>
                 <li><a href="#">Show 112 more</a></li>
-
             </ul>
         </div>
-        <div class="top">
-
+        <div class="banner">
+            <img src="./images/this is Paris.jpg" alt="this is Paris" class="banner-photo">
         </div>
-        <img src="./images/this is Paris.jpg" alt="this is Paris">
-        <div class="item-a">
+        <div class="account">
             <div>
                 <img src="./images/Avatar.jpg" alt="Paris Hilton" class="avatar">
             </div>
@@ -52,9 +69,8 @@
             <div>
                 <button type="submit" class="subscribe-btn">Subscribe</button>
             </div>
-
         </div>
-        <div class="top-nav">
+        <div class="main-nav">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Videos</a></li>
@@ -66,7 +82,7 @@
                 <li><a href="#"><i class="fas fa-search"></i></a></li>
             </ul>
         </div>
-        <div>
+        <div class="content">
 
         </div>
     </div>
