--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="topbar">
             <div class="logo-container">
                 <a href="#"><i class="fas fa-bars l-icon"></i></a>
-                <a href="#"><i class="fab fa-youtube l-icon"></i>YouTube<sup>DE</sup></a>
+                <img src="./images/youtube_logo.jpg" alt="YouTube logo" class="logo">
             </div>
             <div class="search-container">
                 <form action="/action_page.php">
