search-container design

--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
         <div class="topbar">
             <div class="logo-container">
                 <a href="#"><i class="fas fa-bars l-icon"></i></a>
-                <img src="./images/youtube_logo.jpg" alt="YouTube logo" class="logo">
+                <a href="#"><img src="./images/youtube_logo.jpg" alt="YouTube logo" class="logo"></a>
             </div>
             <div class="search-container">
                 <form action="/action_page.php">
                     <input type="text" placeholder="Search" name="search">
-                    <button type="submit"><i class="fa fa-search"></i></button>
-                    <a href="#"><i class="fas fa-microphone"></i></a>
+                    <button type="submit"><i class="fa fa-search b-icon"></i></button>
                 </form>
+                <a href="#"><i class="fas fa-microphone mic-icon"></i></a>
             </div>
             <div class="personal-account">
                 <a href="#"><i class="fas fa-video"></i></a>
-                <a href="#"><i class="fas fa-ellipsis-h"></i></a>
+                <a href="#"><img src="./images/apps_white_24dp.svg" alt="9dots"></a>
                 <a href="#"><i class="fas fa-bell"></i></a>
-                <img src="./images/MyAvatar.jpg" alt="My account avatar" class="myavatar">
+                <a href="#"><img src="./images/MyAvatar.jpg" alt="My account avatar" class="myavatar"></a>
             </div>
         </div>
         <div class="left-sidebar">
@@ -59,10 +59,9 @@
             <img src="./images/this is Paris.jpg" alt="this is Paris" class="banner-photo">
         </div>
         <div class="account">
-            <div>
+            <div >
                 <img src="./images/Avatar.jpg" alt="Paris Hilton" class="avatar">
-            </div>
-            <div>
+           
                 <h1>Paris Hilton <i class="fas fa-music melod-icon"></i></h1>
                 <p>1.05M subscribers</p>
             </div>
