adding icons into left sidebar container

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
         </div>
         <div class="left-sidebar">
             <ul>
-                <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                <li><a href="#"><i class="fas fa-fire"></i> Trending</a></li>
-                <li><a href="#">Subscriptions</a></li>
+                <li><a href="#"><img src="./images/home_white_24dp.svg" alt=""> Home</a></li>
+                <li><a href="#"><img src="./images/local_fire_department_white_24dp.svg" alt=""> Trending</a></li>
+                <li><a href="#"><img src="./images/subscriptions_white_24dp.svg" alt=""> Subscriptions</a></li>
                 <hr>
-                <li><a href="#">Library</a></li>
-                <li><a href="#">History</a></li>
-                <li><a href="#">Your videos</a></li>
-                <li><a href="#">Watch later</a></li>
-                <li><a href="#">Favorite</a></li>
-                <li><a href="#">Show more</a></li>
+                <li><a href="#"><img src="./images/video_library_white_24dp.svg" alt=""> Library</a></li>
+                <li><a href="#"><img src="./images/history_white_24dp.svg" alt=""> History</a></li>
+                <li><a href="#"><img src="./images/slideshow_white_24dp.svg" alt=""> Your videos</a></li>
+                <li><a href="#"><img src="./images/schedule_white_24dp.svg" alt=""> Watch later</a></li>
+                <li><a href="#"><img src="./images/playlist_play_white_24dp.svg" alt=""> Favorite</a></li>
+                <li><a href="#"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt=""> Show more</a></li>
                 <hr>
                 <li><a href="#">SUBSCRIPTIONS</a></li>
                 <li><a href="#">DW Documentary</a></li>
