adding logos into the left sidebar container SUBSCRIPTIONS

--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
         </div>
         <div class="left-sidebar">
             <ul>
-                <li><a href="#"><img src="./images/home_white_24dp.svg" alt=""> Home</a></li>
-                <li><a href="#"><img src="./images/local_fire_department_white_24dp.svg" alt=""> Trending</a></li>
-                <li><a href="#"><img src="./images/subscriptions_white_24dp.svg" alt=""> Subscriptions</a></li>
+                <li><a href="#"><img src="./images/home_white_24dp.svg" alt="home-icon"> Home</a></li>
+                <li><a href="#"><img src="./images/local_fire_department_white_24dp.svg" alt="fire-icon"> Trending</a></li>
+                <li><a href="#"><img src="./images/subscriptions_white_24dp.svg" alt="subscriptions-icon"> Subscriptions</a></li>
                 <hr>
-                <li><a href="#"><img src="./images/video_library_white_24dp.svg" alt=""> Library</a></li>
-                <li><a href="#"><img src="./images/history_white_24dp.svg" alt=""> History</a></li>
-                <li><a href="#"><img src="./images/slideshow_white_24dp.svg" alt=""> Your videos</a></li>
-                <li><a href="#"><img src="./images/schedule_white_24dp.svg" alt=""> Watch later</a></li>
-                <li><a href="#"><img src="./images/playlist_play_white_24dp.svg" alt=""> Favorite</a></li>
-                <li><a href="#"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt=""> Show more</a></li>
+                <li><a href="#"><img src="./images/video_library_white_24dp.svg" alt="library-icon"> Library</a></li>
+                <li><a href="#"><img src="./images/history_white_24dp.svg" alt="history-icon"> History</a></li>
+                <li><a href="#"><img src="./images/slideshow_white_24dp.svg" alt="slideshow-icon"> Your videos</a></li>
+                <li><a href="#"><img src="./images/schedule_white_24dp.svg" alt="clock-icon"> Watch later</a></li>
+                <li><a href="#"><img src="./images/playlist_play_white_24dp.svg" alt="playlist-icon"> Favorite</a></li>
+                <li><a href="#"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt="arrow_down-icon"> Show more</a></li>
                 <hr>
-                <li><a href="#">SUBSCRIPTIONS</a></li>
-                <li><a href="#">DW Documentary</a></li>
-                <li><a href="#">tagesschau</a></li>
-                <li><a href="#">Pro Home Cooks</a></li>
-                <li><a href="#">Karl Conrad</a></li>
-                <li><a href="#">Marques Brownlee</a></li>
-                <li><a href="#">Business Insider</a></li>
-                <li><a href="#">Tasty</a></li>
-                <li><a href="#">Show 112 more</a></li>
+                <li><a href="#"><b>SUBSCRIPTIONS</b></a></li>
+                <li><a href="#"><img src="./images/DW.jpg" alt=""> DW Documentary</a></li>
+                <li><a href="#"><img src="./images/Tagesschau-logo.jpg" alt=""> tagesschau</a></li>
+                <li><a href="#"><img src="./images/pro home cooks.jpg" alt=""> Pro Home Cooks</a></li>
+                <li><a href="#"><img src="./images/Karl Conrad.jpg" alt=""> Karl Conrad</a></li>
+                <li><a href="#"><img src="./images/Marques Brownlee.jpg" alt=""> Marques Brownlee</a></li>
+                <li><a href="#"><img src="./images/Business insider.jpeg" alt=""> Business Insider</a></li>
+                <li><a href="#"><img src="./images/tasty.png" alt=""> Tasty</a></li>
+                <li><a href="#"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt=""> Show 112 more</a></li>
             </ul>
         </div>
         <div class="banner">
