adding hovering to the left sidebar container

--- a/index.html
+++ b/index.html
@@ -34,35 +34,41 @@
         <div class="left-sidebar">
             <ul>
                 <li><a href="#"><img src="./images/home_white_24dp.svg" alt="home-icon"> Home</a></li>
-                <li><a href="#"><img src="./images/local_fire_department_white_24dp.svg" alt="fire-icon"> Trending</a></li>
-                <li><a href="#"><img src="./images/subscriptions_white_24dp.svg" alt="subscriptions-icon"> Subscriptions</a></li>
+                <li><a href="#"><img src="./images/local_fire_department_white_24dp.svg" alt="fire-icon"> Trending</a>
+                </li>
+                <li><a href="#"><img src="./images/subscriptions_white_24dp.svg" alt="subscriptions-icon">
+                        Subscriptions</a></li>
                 <hr>
                 <li><a href="#"><img src="./images/video_library_white_24dp.svg" alt="library-icon"> Library</a></li>
                 <li><a href="#"><img src="./images/history_white_24dp.svg" alt="history-icon"> History</a></li>
                 <li><a href="#"><img src="./images/slideshow_white_24dp.svg" alt="slideshow-icon"> Your videos</a></li>
                 <li><a href="#"><img src="./images/schedule_white_24dp.svg" alt="clock-icon"> Watch later</a></li>
                 <li><a href="#"><img src="./images/playlist_play_white_24dp.svg" alt="playlist-icon"> Favorite</a></li>
-                <li><a href="#"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt="arrow_down-icon"> Show more</a></li>
+                <li><a href="#"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt="arrow_down-icon"> Show
+                        more</a></li>
                 <hr>
                 <li><a href="#"><b>SUBSCRIPTIONS</b></a></li>
-                <li><a href="#"><img src="./images/DW.jpg" alt=""> DW Documentary</a></li>
-                <li><a href="#"><img src="./images/Tagesschau-logo.jpg" alt=""> tagesschau</a></li>
-                <li><a href="#"><img src="./images/pro home cooks.jpg" alt=""> Pro Home Cooks</a></li>
-                <li><a href="#"><img src="./images/Karl Conrad.jpg" alt=""> Karl Conrad</a></li>
-                <li><a href="#"><img src="./images/Marques Brownlee.jpg" alt=""> Marques Brownlee</a></li>
-                <li><a href="#"><img src="./images/Business insider.jpeg" alt=""> Business Insider</a></li>
-                <li><a href="#"><img src="./images/tasty.png" alt=""> Tasty</a></li>
-                <li><a href="#"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt=""> Show 112 more</a></li>
+                <li><a href="#"><img src="./images/DW.jpg" alt="DW"> DW Documentary</a></li>
+                <li><a href="#"><img src="./images/Tagesschau-logo.jpg" alt="tagesschau"> tagesschau</a></li>
+                <li><a href="#"><img src="./images/pro home cooks.jpg" alt="Pro Home Cooks"> Pro Home Cooks</a></li>
+                <li><a href="#"><img src="./images/Karl Conrad.jpg" alt="Karl Conrad"> Karl Conrad</a></li>
+                <li><a href="#"><img src="./images/Marques Brownlee.jpg" alt="Marques Brownlee"> Marques Brownlee</a>
+                </li>
+                <li><a href="#"><img src="./images/Business insider.jpeg" alt="Business Insider"> Business Insider</a>
+                </li>
+                <li><a href="#"><img src="./images/tasty.png" alt="Tasty"> Tasty</a></li>
+                <li><a href="#"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt="arrow_down-icon"> Show 112
+                        more</a></li>
             </ul>
         </div>
         <div class="banner">
-            <img src="./images/this is Paris.jpg" alt="this is Paris" class="banner-photo">
+            <img src="./images/this is Paris.jpg" alt="this is Paris">
         </div>
-        <div class="account">
-            <div >
+        <div class="channel">
+            <!-- <a href="#"><img src="./images/Avatar.jpg" alt="Peris Hilton" class="avatar"><h1>Peris Hilton<h1></a> -->
+            <div class="channel-info">
                 <img src="./images/Avatar.jpg" alt="Paris Hilton" class="avatar">
-           
-                <h1>Paris Hilton <i class="fas fa-music melod-icon"></i></h1>
+                <h1>Paris Hilton <img src="./images/music_note_white_24dp.svg" alt="music note icon"> </h1>
                 <p>1.05M subscribers</p>
             </div>
             <div>
