adding the first video in Content

--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
             </ul>
         </div>
         <div class="content">
-
+            <div>
+                <img src="./images/YouTube(1).jpg" alt="Video1">
+                <h3>L'Officiel Italia Cover Shoot Behind the Scenes with Pari...</h3>
+                <p>67K views * 1 week ago</p>
+            </div>
         </div>
     </div>
 </body>
