coppying 5 video divs

--- a/index.html
+++ b/index.html
@@ -88,11 +88,33 @@
             </ul>
         </div>
         <div class="content">
-            <div>
+            <h2>Uploads</h2>
+            <div class="vid">
                 <img src="./images/YouTube(1).jpg" alt="Video1">
                 <h3>L'Officiel Italia Cover Shoot Behind the Scenes with Pari...</h3>
                 <p>67K views * 1 week ago</p>
             </div>
+            <div class="vid">
+                <img src="./images/YouTube(2).jpg" alt="Video2">
+                <h3>Engagement Ring Design - Hand painted in the Atelier ...</h3>
+                <p>238K views * 2 weeks ago</p>
+            </div>
+            <div class="vid">
+                <img src="./images/YouTube(3).jpg" alt="Video3">
+                <h3>Engagement Ring Design - Hand painted in the Atelier ...</h3>
+                <p>238K views * 2 weeks ago</p>
+            </div>
+            <div class="vid">
+                <img src="./images/YouTube(4).jpg" alt="Video4">
+                <h3>Engagement Ring Design - Hand painted in the Atelier ...</h3>
+                <p>238K views * 2 weeks ago</p>
+            </div>
+            <div class="vid">
+                <img src="./images/YouTube(5).jpg" alt="Video5">
+                <h3>Engagement Ring Design - Hand painted in the Atelier ...</h3>
+                <p>238K views * 2 weeks ago</p>
+            </div>
+           
         </div>
     </div>
 </body>
