adding videos 5-10 and styling the content container

--- a/index.html
+++ b/index.html
@@ -88,33 +88,60 @@
             </ul>
         </div>
         <div class="content">
-            <h2>Uploads</h2>
-            <div class="vid">
-                <img src="./images/YouTube(1).jpg" alt="Video1">
-                <h3>L'Officiel Italia Cover Shoot Behind the Scenes with Pari...</h3>
-                <p>67K views * 1 week ago</p>
+            <h4>Uploads</h4>
+            <div class="uploads">
+                <div class="vid">
+                    <img src="./images/YouTube(1).jpg" alt="Video1">
+                    <h3>L'Officiel Italia Cover Shoot Behind the Scenes with Pari...</h3>
+                    <p>67K views * 1 week ago</p>
+                </div>
+                <div class="vid">
+                    <img src="./images/YouTube(2).jpg" alt="Video2">
+                    <h3>Engagement Ring Design - Hand painted in the Atelier ...</h3>
+                    <p>238K views * 2 weeks ago</p>
+                </div>
+                <div class="vid">
+                    <img src="./images/YouTube(3).jpg" alt="Video3">
+                    <h3>Behind the Scenes - Paris Hilton's Latest Music Video...</h3>
+                    <p>42K views * 3 weeks ago</p>
+                </div>
+                <div class="vid">
+                    <img src="./images/YouTube(4).jpg" alt="Video4">
+                    <h3>Paris Hilton - Heartbeat Official Music Video</h3>
+                    <p>187K views * 3 weeks ago</p>
+                </div>
+                <div class="vid">
+                    <img src="./images/YouTube(5).jpg" alt="Video5">
+                    <h3>This Is Paris Podcast Introduces "Loves It" with...</h3>
+                    <p>13K views * 1 month ago</p>
+                </div>
+                <div class="vid">
+                    <img src="./images/YouTube(6).jpg" alt="Video6">
+                    <h3>Announcing the This Is Paris Podcast!</h3>
+                    <p>12K views * 1 month ago</p>
+                </div>
+                <div class="vid">
+                    <img src="./images/YouTube(7).jpg" alt="Video7">
+                    <h3>Paris & Nicky Hilton Live Q&A</h3>
+                    <p>306K views * 2 months ago</p>
+                </div>
+                <div class="vid">
+                    <img src="./images/YouTube(8).jpg" alt="Video8">
+                    <h3>BTS at Paris Hilton's Valentino x Vogue Shoot</h3>
+                    <p>42K views * 2 months ago</p>
+                </div>
+                <div class="vid">
+                    <img src="./images/YouTube(9).jpg" alt="Video9">
+                    <h3>Paris Hilton's 2020 Year in Review</h3>
+                    <p>187K views * 3 months ago</p>
+                </div>
+                <div class="vid">
+                    <img src="./images/YouTube(10).jpg" alt="Video10">
+                    <h3>Paris Hilton's 2020 Holiday Lookbook</h3>
+                    <p>13K views * 3 months ago</p>
+                </div>
             </div>
-            <div class="vid">
-                <img src="./images/YouTube(2).jpg" alt="Video2">
-                <h3>Engagement Ring Design - Hand painted in the Atelier ...</h3>
-                <p>238K views * 2 weeks ago</p>
-            </div>
-            <div class="vid">
-                <img src="./images/YouTube(3).jpg" alt="Video3">
-                <h3>Engagement Ring Design - Hand painted in the Atelier ...</h3>
-                <p>238K views * 2 weeks ago</p>
-            </div>
-            <div class="vid">
-                <img src="./images/YouTube(4).jpg" alt="Video4">
-                <h3>Engagement Ring Design - Hand painted in the Atelier ...</h3>
-                <p>238K views * 2 weeks ago</p>
-            </div>
-            <div class="vid">
-                <img src="./images/YouTube(5).jpg" alt="Video5">
-                <h3>Engagement Ring Design - Hand painted in the Atelier ...</h3>
-                <p>238K views * 2 weeks ago</p>
-            </div>
-           
+
         </div>
     </div>
 </body>
