giving some margin for items in top menu

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
                 <li><a href="#"><img src="./images/Business insider.jpeg" alt="Business Insider"> Business Insider</a>
                 </li>
                 <li><a href="#"><img src="./images/tasty.png" alt="Tasty"> Tasty</a></li>
-                <li><a href="#"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt="arrow_down-icon"> Show 112
-                        more</a></li>
+                <li><a href="#"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt="arrow_down-icon"> Show 112 more</a></li>
             </ul>
         </div>
         <div class="banner">
@@ -141,7 +140,6 @@
                     <p>13K views * 3 months ago</p>
                 </div>
             </div>
-
         </div>
     </div>
 </body>
