styling channel-info container

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <li><a href="#"><img src="./images/Business insider.jpeg" alt="Business Insider"> Business Insider</a>
                 </li>
                 <li><a href="#"><img src="./images/tasty.png" alt="Tasty"> Tasty</a></li>
-                <li><a href="#"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt="arrow_down-icon"> Show 112 more</a></li>
+                <li><a href="#"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt="arrow_down-icon"> Show 112
+                        more</a></li>
             </ul>
         </div>
         <div class="banner">
@@ -67,8 +68,10 @@
             <!-- <a href="#"><img src="./images/Avatar.jpg" alt="Peris Hilton" class="avatar"><h1>Peris Hilton<h1></a> -->
             <div class="channel-info">
                 <img src="./images/Avatar.jpg" alt="Paris Hilton" class="avatar">
-                <h1>Paris Hilton <img src="./images/music_note_white_24dp.svg" alt="music note icon"> </h1>
-                <p>1.05M subscribers</p>
+                <div class="info">
+                    <h1>Paris Hilton <img src="./images/music_note_white_24dp.svg" alt="music note icon"> </h1>
+                    <p>1.05M subscribers</p>
+                </div>
             </div>
             <div>
                 <button type="submit" class="subscribe-btn">Subscribe</button>
