dark-light modes

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <img src="./images/Avatar.jpg" alt="Paris Hilton" class="avatar">
                 <div class="info">
                     <h1>Paris Hilton <img src="./images/music_note_white_24dp.svg" alt="music note icon"> </h1>
+                    <input type="checkbox" onchange="theme()" name="mood" id="light-dark" />
                     <p>1.05M subscribers</p>
                 </div>
             </div>
@@ -145,6 +146,7 @@
             </div>
         </div>
     </div>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
