--- a/index.html
+++ b/index.html
@@ -33,31 +33,31 @@
         </div>
         <div class="left-sidebar">
             <ul>
-                <li><a href="#"><img src="./images/home_white_24dp.svg" alt="home-icon"> Home</a></li>
-                <li><a href="#"><img src="./images/local_fire_department_white_24dp.svg" alt="fire-icon"> Trending</a>
+                <li><a href="#" class = "left-anchors"><img src="./images/home_white_24dp.svg" alt="home-icon"> Home</a></li>
+                <li><a href="#" class = "left-anchors"><img src="./images/local_fire_department_white_24dp.svg" alt="fire-icon"> Trending</a>
                 </li>
-                <li><a href="#"><img src="./images/subscriptions_white_24dp.svg" alt="subscriptions-icon">
+                <li><a href="#" class = "left-anchors"><img src="./images/subscriptions_white_24dp.svg" alt="subscriptions-icon">
                         Subscriptions</a></li>
-                <hr>
-                <li><a href="#"><img src="./images/video_library_white_24dp.svg" alt="library-icon"> Library</a></li>
-                <li><a href="#"><img src="./images/history_white_24dp.svg" alt="history-icon"> History</a></li>
-                <li><a href="#"><img src="./images/slideshow_white_24dp.svg" alt="slideshow-icon"> Your videos</a></li>
-                <li><a href="#"><img src="./images/schedule_white_24dp.svg" alt="clock-icon"> Watch later</a></li>
-                <li><a href="#"><img src="./images/playlist_play_white_24dp.svg" alt="playlist-icon"> Favorite</a></li>
-                <li><a href="#"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt="arrow_down-icon"> Show
+                <hr class = "left-anchors">
+                <li><a href="#" class = "left-anchors"><img src="./images/video_library_white_24dp.svg" alt="library-icon"> Library</a></li>
+                <li><a href="#" class = "left-anchors"><img src="./images/history_white_24dp.svg" alt="history-icon"> History</a></li>
+                <li><a href="#" class = "left-anchors"><img src="./images/slideshow_white_24dp.svg" alt="slideshow-icon"> Your videos</a></li>
+                <li><a href="#" class = "left-anchors"><img src="./images/schedule_white_24dp.svg" alt="clock-icon"> Watch later</a></li>
+                <li><a href="#" class = "left-anchors"><img src="./images/playlist_play_white_24dp.svg" alt="playlist-icon"> Favorite</a></li>
+                <li><a href="#" class = "left-anchors"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt="arrow_down-icon"> Show
                         more</a></li>
-                <hr>
-                <li><a href="#"><b>SUBSCRIPTIONS</b></a></li>
-                <li><a href="#"><img src="./images/DW.jpg" alt="DW"> DW Documentary</a></li>
-                <li><a href="#"><img src="./images/Tagesschau-logo.jpg" alt="tagesschau"> tagesschau</a></li>
-                <li><a href="#"><img src="./images/pro home cooks.jpg" alt="Pro Home Cooks"> Pro Home Cooks</a></li>
-                <li><a href="#"><img src="./images/Karl Conrad.jpg" alt="Karl Conrad"> Karl Conrad</a></li>
-                <li><a href="#"><img src="./images/Marques Brownlee.jpg" alt="Marques Brownlee"> Marques Brownlee</a>
+                <hr class = "left-anchors">
+                <li><a href="#" class = "left-anchors"><b>SUBSCRIPTIONS</b></a></li>
+                <li><a href="#" class = "left-anchors"><img src="./images/DW.jpg" alt="DW"> DW Documentary</a></li>
+                <li><a href="#" class = "left-anchors"><img src="./images/Tagesschau-logo.jpg" alt="tagesschau"> tagesschau</a></li>
+                <li><a href="#" class = "left-anchors"><img src="./images/pro home cooks.jpg" alt="Pro Home Cooks"> Pro Home Cooks</a></li>
+                <li><a href="#" class = "left-anchors"><img src="./images/Karl Conrad.jpg" alt="Karl Conrad"> Karl Conrad</a></li>
+                <li><a href="#" class = "left-anchors"><img src="./images/Marques Brownlee.jpg" alt="Marques Brownlee"> Marques Brownlee</a>
                 </li>
-                <li><a href="#"><img src="./images/Business insider.jpeg" alt="Business Insider"> Business Insider</a>
+                <li><a href="#" class = "left-anchors"><img src="./images/Business insider.jpeg" alt="Business Insider"> Business Insider</a>
                 </li>
-                <li><a href="#"><img src="./images/tasty.png" alt="Tasty"> Tasty</a></li>
-                <li><a href="#"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt="arrow_down-icon"> Show 112
+                <li><a href="#" class = "left-anchors"><img src="./images/tasty.png" alt="Tasty"> Tasty</a></li>
+                <li><a href="#" class = "left-anchors"><img src="./images/keyboard_arrow_down_white_24dp.svg" alt="arrow_down-icon"> Show 112
                         more</a></li>
             </ul>
         </div>
